[INFER] DefineConstructorAndPrototype should update types before adding global property, bug 647464.